# Star-Shooter

./: .gitignore  ADIRECTION.md  ADirection.md  Cargo.toml  GDirection.md  README.md
.github/workflows/: release.yml  rust.yml
config/: display.ron
src/: main.rs  space_shooter_types.rs
src/bots/: ai.rs
