[package]
name = "Star-Shooter"
version = "0.1.0"
authors = ["Lucas Daniel Velazquez M <Luxter77@users.noreply.github.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.2"
laminar = "0.4.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
